@@ -13,39 +13,108 @@ Description: Stations database and source lib for weather.com
  for Other Maemo Weather
  © 2006-2008 by Vlad Vasiliev and Pavel Fialko
 XB-Maemo-Display-Name: OMWeather database for weather.com
+#XB-Maemo-Icon-26:
+# iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A
+# /wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB9gLHgk7K2pwCKgAAAAZdEVYdENv
+# bW1lbnQAQ3JlYXRlZCB3aXRoIEdJTVBXgQ4XAAAGyElEQVRIx5WWa3BVVx3Ff3ufc+47lya5gcgj
+# CQ0gQkptI0KRoQyOwxQr08o4OGpbP2mtFscM06E4A4wdWlBRaVGqFsZS2wFE4gcehRQJyBsSLMgj
+# 0CRgEkJubm4eN4/7OOf8/XAvJJR21DWz5uwP55y19tr/vfcfhmEA3srKyorq6urq2trahkOHDl3e
+# vHnzz/1+fwGgAJ2j4v+EAlBKhdasWbO4oqLiEREpAaaKiGvbttLaCaeHmmu/+IWpg15voBi0zmSG
+# Orpi7RcO1Jw4vPqVdxsBZ4QBN0f5uFBg3rxXn33mmXkrBgeHkpaFU1CQsi0j5p1SHhwzaVJJ2OcL
+# apS6z2M6NTjU0HD17xt+/dbWw0ebbodCIaOhoSHmOE4U6AXsu29v3779laqqih8mEjrk94vjOI52
+# HIwnFqbVr36hdXFxJufnHoO4jhDv7qOxqRPLNzYNgTjKGEgmUx179+796/r166sdx2kFMgCqrq7u
+# 6pIl3pKnnsrcfvrpnnjY11waDE6NVL3koyNqcuRQFz5fVsRxHAYGUwwOJkkm07S09BAIT6enu5tM
+# xiaZTPWm0rp97NixgSNHjry7atWqTcBtwNUej8fWWmMY2sgPXBz38ENjIpPLY7z91i1u3FQcrHGB
+# fjKZHlpab3L5Shtd3UESA378wRL6euOAg2Up8vL8owJ+KYpGo32VlZVLZ86c+SjgAdA1NTUeQJly
+# Me9zk/UYRQ+QID+/l8dmDXD6jMZ1+4h23qKlzSEYnkFPr8tQ0o/taLQG09Q5KsJ5/kKvZeeJiD1t
+# 2rT5QABAL1++vKq5ORZ/cPzNfNM0FZJAJAEkKMgfItaVpq29lY+aWjCtcST6omht4zgpRDJYlh6m
+# mX2OCvMZrbBjsVgBUABY2nXdfSKRqGkFgMQwJUG0U5HOxEn0lzDxwYX4/CYer8bjydKyDDweA4+V
+# oydLv9/j8fvS4ZUrV47buHHjIsMwxpnZkspYgsrNJIv2qJeTp/JZtz6IMEC8ewitBcMwshUoChGG
+# 9+7IohSDoD+Vn3LcMQsWLPjB2rVrg+aC2Yy6eK1zDNIHkiCZMvjXlQKWv/wYkUiMykoLpdJ4PDkB
+# BQrJaqFARuyvO2KiMbX43bS2kslkury8/Ovml2dT1hnvi/x4xWJeWi0YhhAOJ1n4lQbmzt1BOv0j
+# QiHfiENHRgw/QQTAFUQr7XFdnzatxOXLlwvNyRMoObj9e7hKg28Ohjef8KgUDmne29HF6dNnWbx4
+# /t3Z3B/TvWOFgOsiYuFxlaVMS+/fvz9mWgaBSH4XhlcQ8wh4ZyHawBZhzpwAr67bTmlpMQ9//rMk
+# Eha2nV0XrYRQyMEy3eFDSQBJgc5Gmk6nzD++ucl35syZbWZ/gpSdEQwvIN1gnwdrCobWTBjvsGxZ
+# kJ27XmN3tZ8DB35Jom8ClpVBKUUwaDN71htMLLuEEhAngSKJVop0Ujh8bOjmhSvxrcAB80Yr7ekk
+# eEO5GNwOcIZQqpSA38P0aVBV9QD9gy4ffggvvPA231haQzppsemNb3H82HdY97MqsG+D3Y0SMASS
+# CbB72HLhCruAfvNoPY3PxujPixBSkC1Ztw+xL6HMB/B5RuEt9FIUAa9HiERcyifaKNdm8ZP17N0z
+# m7Lx11GOjXJBOdlLInqDtAEngB4A83A98bYW6iZM4fG7h7SAEhdx4kActIFSHhRpmj7K4+SxIgb6
+# TTZsWMTSJfswsHNlT/Y2URBt5/rv/0bznfUzbYfM9UZ2VDzK46HC3IK6uWJSoFxAHFBDIC67d8/n
+# H0dnkLFNerrDvPj9bVlj7rDJZD9cv8auVIbkPXfLk1+i6MIumt1WxG1HnA7E6UTsLsSOI5keJNOL
+# zKzcKb/9zVLJ9CLpbiVXz5VIpOCEnK+dIk5H9lu3DWnYQ+y7iygdqaEB9hwndq6etV23cHFz7kbk
+# rZzcOOdcOaBdYVLZvykZ3865+ofuzqivE87VseFP+2i5TwiQ1Vv4c91J/jLYO/zDO6LKzXUFdzao
+# A25GU39+OtcayygvbQGBVD+cP8UHq/7A67m+4ZPxtblEat/kg/5L2QjcW7kob2fjnPnITikqPC7l
+# ZQdkYmmNjI4ckxUv/kTsFi2DV5ETWzn73BOM/9QuaCQWzqJw2VJer5zFN4tK0MoYfrPp5gSGkt5s
+# FMqluKiL/HAvXW24/zzLvm17eP6d92n7n3uwoA/v75bz7dPbuNxxAjfdiLitiLRl6bYimWYkegq3
+# /j2atrzM82Mj+P9rX/dpKBxF6KfPMb+smK8WjWaGP8BoQKWSxKJRLrVFef+1dzjY1knffW3Sx/Af
+# M6NDn51cofQAAAAASUVORK5CYII=
 XB-Maemo-Icon-26:
- iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAYAAACpSkzOAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A
- /wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB9gLHgk7K2pwCKgAAAAZdEVYdENv
- bW1lbnQAQ3JlYXRlZCB3aXRoIEdJTVBXgQ4XAAAGyElEQVRIx5WWa3BVVx3Ff3ufc+47lya5gcgj
- CQ0gQkptI0KRoQyOwxQr08o4OGpbP2mtFscM06E4A4wdWlBRaVGqFsZS2wFE4gcehRQJyBsSLMgj
- 0CRgEkJubm4eN4/7OOf8/XAvJJR21DWz5uwP55y19tr/vfcfhmEA3srKyorq6urq2trahkOHDl3e
- vHnzz/1+fwGgAJ2j4v+EAlBKhdasWbO4oqLiEREpAaaKiGvbttLaCaeHmmu/+IWpg15voBi0zmSG
- Orpi7RcO1Jw4vPqVdxsBZ4QBN0f5uFBg3rxXn33mmXkrBgeHkpaFU1CQsi0j5p1SHhwzaVJJ2OcL
- apS6z2M6NTjU0HD17xt+/dbWw0ebbodCIaOhoSHmOE4U6AXsu29v3779laqqih8mEjrk94vjOI52
- HIwnFqbVr36hdXFxJufnHoO4jhDv7qOxqRPLNzYNgTjKGEgmUx179+796/r166sdx2kFMgCqrq7u
- 6pIl3pKnnsrcfvrpnnjY11waDE6NVL3koyNqcuRQFz5fVsRxHAYGUwwOJkkm07S09BAIT6enu5tM
- xiaZTPWm0rp97NixgSNHjry7atWqTcBtwNUej8fWWmMY2sgPXBz38ENjIpPLY7z91i1u3FQcrHGB
- fjKZHlpab3L5Shtd3UESA378wRL6euOAg2Up8vL8owJ+KYpGo32VlZVLZ86c+SjgAdA1NTUeQJly
- Me9zk/UYRQ+QID+/l8dmDXD6jMZ1+4h23qKlzSEYnkFPr8tQ0o/taLQG09Q5KsJ5/kKvZeeJiD1t
- 2rT5QABAL1++vKq5ORZ/cPzNfNM0FZJAJAEkKMgfItaVpq29lY+aWjCtcST6omht4zgpRDJYlh6m
- mX2OCvMZrbBjsVgBUABY2nXdfSKRqGkFgMQwJUG0U5HOxEn0lzDxwYX4/CYer8bjydKyDDweA4+V
- oydLv9/j8fvS4ZUrV47buHHjIsMwxpnZkspYgsrNJIv2qJeTp/JZtz6IMEC8ewitBcMwshUoChGG
- 9+7IohSDoD+Vn3LcMQsWLPjB2rVrg+aC2Yy6eK1zDNIHkiCZMvjXlQKWv/wYkUiMykoLpdJ4PDkB
- BQrJaqFARuyvO2KiMbX43bS2kslkury8/Ovml2dT1hnvi/x4xWJeWi0YhhAOJ1n4lQbmzt1BOv0j
- QiHfiENHRgw/QQTAFUQr7XFdnzatxOXLlwvNyRMoObj9e7hKg28Ohjef8KgUDmne29HF6dNnWbx4
- /t3Z3B/TvWOFgOsiYuFxlaVMS+/fvz9mWgaBSH4XhlcQ8wh4ZyHawBZhzpwAr67bTmlpMQ9//rMk
- Eha2nV0XrYRQyMEy3eFDSQBJgc5Gmk6nzD++ucl35syZbWZ/gpSdEQwvIN1gnwdrCobWTBjvsGxZ
- kJ27XmN3tZ8DB35Jom8ClpVBKUUwaDN71htMLLuEEhAngSKJVop0Ujh8bOjmhSvxrcAB80Yr7ekk
- eEO5GNwOcIZQqpSA38P0aVBV9QD9gy4ffggvvPA231haQzppsemNb3H82HdY97MqsG+D3Y0SMASS
- CbB72HLhCruAfvNoPY3PxujPixBSkC1Ztw+xL6HMB/B5RuEt9FIUAa9HiERcyifaKNdm8ZP17N0z
- m7Lx11GOjXJBOdlLInqDtAEngB4A83A98bYW6iZM4fG7h7SAEhdx4kActIFSHhRpmj7K4+SxIgb6
- TTZsWMTSJfswsHNlT/Y2URBt5/rv/0bznfUzbYfM9UZ2VDzK46HC3IK6uWJSoFxAHFBDIC67d8/n
- H0dnkLFNerrDvPj9bVlj7rDJZD9cv8auVIbkPXfLk1+i6MIumt1WxG1HnA7E6UTsLsSOI5keJNOL
- zKzcKb/9zVLJ9CLpbiVXz5VIpOCEnK+dIk5H9lu3DWnYQ+y7iygdqaEB9hwndq6etV23cHFz7kbk
- rZzcOOdcOaBdYVLZvykZ3865+ofuzqivE87VseFP+2i5TwiQ1Vv4c91J/jLYO/zDO6LKzXUFdzao
- A25GU39+OtcayygvbQGBVD+cP8UHq/7A67m+4ZPxtblEat/kg/5L2QjcW7kob2fjnPnITikqPC7l
- ZQdkYmmNjI4ckxUv/kTsFi2DV5ETWzn73BOM/9QuaCQWzqJw2VJer5zFN4tK0MoYfrPp5gSGkt5s
- FMqluKiL/HAvXW24/zzLvm17eP6d92n7n3uwoA/v75bz7dPbuNxxAjfdiLitiLRl6bYimWYkegq3
- /j2atrzM82Mj+P9rX/dpKBxF6KfPMb+smK8WjWaGP8BoQKWSxKJRLrVFef+1dzjY1knffW3Sx/Af
- M6NDn51cofQAAAAASUVORK5CYII=
-
+ iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A
+ /wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB9kLCRIhFHraL1wAAAAZdEVYdENv
+ bW1lbnQAQ3JlYXRlZCB3aXRoIEdJTVBXgQ4XAAAOX0lEQVRo3u2aeZBcxX3HP9393s7M7ux9IAmJ
+ lQQSAhkQQig2h2RbNrYTDHYKqFAhRZmYkOCAc1RsIEgQKMsmwdi4SjEGHAMmEGMSBA6KkAEFFXEh
+ FRLoQEIrrbQ6dmf2mt2de97RnT/m7e4cu4sAu/JPXtWvpl+/fv1+5/f36+6B/7/+by/xO5hPlMxr
+ SuiDeCh9hw9457cmgARCQKS5uT56w/VrTp83t6O1qSlaBzA6ms6cODkw/PSzr/WOjKTSQA4oBMwJ
+ QAF2QCro04AHuMGvP5Mw4iNquQZouvvb1y3/0hc/+dm5c2evbG2btdC2I/VC2LYQIQlgjKON8VzX
+ zaWGh2JHenv7dvzq5d9s/e4/Pb8HyAfzRIHaoC0DpvNAGkgBWcAJBDMfRwAB1HzuM0s7v/mNL//h
+ xRcvu769Y+E5UtXaCDsY4k/jDQpQaF0glx1zDx96r+vfX9iy+Ymfv/HOqtWfb12zZs05ixYt6rRt
+ OzQ0NJTYvn37wU2bNu3evXv3Mc/z+oGRwHpepRCnKoD1qZULZv3dX195zac/vfr25taFCxARMG6g
+ mJkvY8AYTaHgMjKaIhZLkhgZo75hdnrO3MV+JpPPpVIpx3VdU19fr5qamuxsNpvZsmXLqw888MDG
+ vr6+bmAgsEqZS00jwGiFqYzb3FTwV6zwQ1f+viu+duMQ9fV6BoYNvq/xfR/f1xhj8DyfVDpLX98Q
+ o2OGeZ3LKDgu8XjMZDOpbCbr9ktpZwGklFZzc3Oks7Mzsn///n1r16795wMHDuwB4oFL+R9SgPJr
+ 9iyXl/7jGCsuypczjsH3fRzHI5PNk83kyBdcPM/Hcz2SqSzJpGb23AvJ5fKkUmMIIUBIPNd10ulc
+ XBtrVEppAGVZVrizs7Nh9+7d79x5550PDQ4OHggs4YxbQc7E6DOPX3drYey1VD7ZxdH39/HEYz0s
+ OTtPLG7zB1d3MjzsAQUMBbTJ47o50ukx4v39HDl6jEPdvcT684wlJYkxh1wuT0NzJ67rkM0msZRA
+ SVBCE6qpqWlujs61LL9FCCGUUp4xJtvb25tatGjRBddee+0XpZStQKRU8TNawBl9KW2HO6OYzMTI
+ TEZyyerz2LOvjnvuPs49a3sBg+dpMpk88f4Evb1jhCLzWXjWcmrsEK7rEA7bSOHSFxskFothjKn+
+ uJBorXUyme0zhBJCCA1Y0Wi04ejRo6Pr1q27a2Bg4B1gMIBZrMo5lBIhP/AwOzwrikmUAUpdHay7
+ +wjX/NF5/NcrjdyzthutDYWCw3BilBMnh6lvXE57+xkcPdJNPp9BShBCYNs2vu8j5XS6M0ipZFNj
+ eHYy5XhChMcQwnccJ1dXV9c+d+7cxQMDA10BKrlTuZC86fqWpRN3egRMIcg9RVcxpsDllw4A0HWo
+ FtfNksulSIwkiPcP4nptRKOt9Pb14Pt5amoUtq1QSmK0jxCglJyapERJsGtCqqFezEbosGVZRkrp
+ ep7nGWM6K3JGlQCNf3VL6x2Tt/ki86bI/LggTU1pAFIpxchIgli8n75YP6Ojaeqis8hkRrCUxrYF
+ liVQKvi1xMzMT7QhHK4LRSP504rhoHQ6nc4nEgkJ1AMNQBhQpQLYP7g3tGbJ4nlfmbRoCfOBJYzJ
+ MzBY9LFo1OHYiTjx/iy23caZZy2nubkB8FCWRClRQbIYuKdEiro61aikU6+UMnPnzi3cfPPN3vnn
+ n98MdAAtQGRCANum+bqrav9G2nPscgvkweQn2lrneX1rPQBz5gwhrU+w9Lwb6Fz4BaL1i9HaK2NY
+ WeWMyUpGZUBVAoBl1Yr62kw7oNrb270bb7zxM5s3b/72o48+elVjY+M8oGU8iO1H1nNFR0fr8mK2
+ nrSAEeUJamQE1j+wDIDLL3OZNftCTpw8ge8VEEEdalmyGPUCBKIY/yUTGTMDAJrym7CQta4uNGgd
+ Gunp6TGRSKTpiiuu+ONQKHTabbfd9oQFUBsheukKda2l3BAiXPJ6sXB0HEWsv47/3jab9f94EYcO
+ t9LYmOPrN1sMDfYhhIdliYkSs5S38qpIfLhi2ShAiEhNrtHRjWNKKd9xHG9oaMhdtmzZFVdfffUB
+ CxA3XcNZs06rX4kZxpTUNjL6l1PO296e4K679lJb24HWBilKlgCCSpanFoBTFMSHcMjU+gUdsqxQ
+ FjBaa1cIET733HM/bwHWygtYUVdrOjA5MOmqOcJhl9aWHJ9Y2s+nPrmXlpYtNLWsAlqwVMC8mKp4
+ NQgBxojyx2bqsZiSdslAKbGV69RKWZcTQphACC+RSCyygJrFC7hEWlKCD3oQPbYuWFcZjBAT/lxw
+ NMd7U/zilyfpje1nxcXnI6VACDmNM4tqRqfTeGmwjb9nPBASjCRku3VGqURQJxnP88yOHTvC8rzF
+ 1DfVs0SQKc7tnyhBn0KAQEUIFaKAUi6NDZo3/+cNXMetwPMiyhRJIquwvhxSp8wBZf0+SiqUEtiW
+ HxICpZRCKSWOHj1q7dy5MyUXnUFLJCxni2JmBh0DnSjLwONZWEqHcNhn0aJacrk423fsREoLKQmo
+ BBYDkqWkSu85BXKRSqGkxFLGlkUBhJTSeuGFF+xMJrNXRiPUhUOyEaEmsd8/OLUFZIHaiMecORaf
+ W9PGhg0bOH68DylrkFJOMhkwKgTlAlQ8n6pvQnjhoaRBycCSllBSCiWlVJs3bw6/+OKLGWPMZrX8
+ XBZ+YRVfr20wctzXIQmyDYQFwg/WDx4IHyF9DJq2dotYfISnnnqNcDhCS0szUkm09oOFjI+vvcm2
+ 7+N7k209Tb/v+2jPw/fT+H7xfc/zyWUdTsayycce/xdrw4YNbjqd/jnwpiVAam2sspgzeYy3B2Ff
+ WBSiJLQsy9DY4HPGPIubvnY6r28d4vnnf8yTT9pE6+uJRCykKiYwGcSsCfQixCQVobckbEuD2+QB
+ p4hHxuD7kBxzxL6DBX84MbYb2AS8C/Rbnocu5IxnDFYZaOhBjL8PxJIyjJcCwmFDa4vBshVfbW7h
+ 8lX1xOIFsjkfpZjwcRBofzIfSFEUylKBeyHGwQ5jQGsD/hDS9KNEEYLR4LnQfxK/p4dHh2FbUE6P
+ AGnLcXByWfLGEK2Ccr8PIzRCzS9awhTr16IQoGxDXVTQ1mYzf4HC9QzGmKB0KAFSU/kriho3TPxi
+ NMYfAC9eFLbkHTQctyic1sKBYzGOlOwv+VYyTTqdImk0UaGmgG8dx5AFcUZxNWfGgxNqFFi2IVJr
+ 0Aa0gap1VsneXFPjq2WPbNtlQWeMG65/mW/e8hDSDBUF0qWCgXZhqIaxaIQTgebH94iMdTzOaCpJ
+ 3C0wJ2RXZMrxpGiSGP99kO0gWoN9nuIqS0nDxAJLiJJ8ZQKNi2BfpTp3ua5N1+EzWHf/X5AcLfC9
+ dfdOKUDBAydPbCDBIGXVJsgDPaQGh+jKJqeuDydMb7xijvC7MDqGMOkizGoHYRwwzsT6AVPsm+wP
+ 2uOMZ1bipM5lLLaQ7/7DOgB+9q9/Mu33s0kYHKLrQA+pqr1NX5M/HmN7agRjdDXjZWWJociMHsDo
+ o+D3gB4Ak0SYfHGjy7gB02458yU1ltHdCNNHbSTB7bf8GIB0pm7iG6WCGA2pEczxGNt9Tb5qxw3w
+ 9nSz/bI+huacSbsVrlaBGA9IMV7LA1qDzAE5jB6XWJbBbpEDH4Nf7kK6eJ/LhvnJT/8UgDWr3qje
+ zzbgOTAQY2jvEbZXus+4AObfXuXgV1fz9vxBvtQ+ryIETHlAipI4H38mgg4jdFHrlTqo2GCvaRwt
+ CWSHG657lgfvvbtK+wIYHYR4nJ3P/pqDU9WxEiDvkNpzmOfiPRS0X62FKpcaN7UuxYPivTAVpGc+
+ IXDdGl7ftppfvvSVqvm1D/EenD3dPJd3qv2/dFfCe2Qjv47F2DsSr9YCFZgtpmrrScwuo1JUGf9Y
+ oglvuIl8vJX3fnMxK5fv5LY7vs8Pf3Jr2XdH4hCLseeRjWyZyn1KBTC9gwxu3cXDfd1oN1+h6Zna
+ epLB6SwwMa4iN9jKZ8lZh3j0+7cD8NAj35h45uahrxu9dRcPnxxgcDoblq5EnAefYVPXEV7uPVzu
+ GlWuY8o1K0rdaQoSurLWKVfEOGuDw20T8/Yehq4jvPzgM2wKNnP5IAHwfEaffoX7jnVzZLivmmlh
+ qv2dEveZ0HgplY4Zd49gvO9Jug6dxZ/97Y8AWLr4ABgY7oVj3Rx5+hXu83xGZzy4qLjXG7ex78LF
+ 3BsO8bBdQ3NjRzkSTaCPqEAgM8NxSQW6qI5qnpTyWH/H/SQHofs9Em/s4p6N29j3QSco1hR9+fVP
+ srGxjg6luG/xhdQ2tJY7oCjd3xEVwf5hTgilT0fbIJes2M63/vxHnNO5k653yL61h++sf5IXg7Xt
+ RzqlFM0NNN19IzetXsF3Fiwl1Dyr4gBVTLFOn8ECVUJWZPiROBx9j8Ibb/P39/+Mn46mGTsVlajp
+ HuQLFLbuYu+cVnrrBb8nDHXRRoI6f/rD4SnJVG0XTbiVdqH3EHS/x+CWt/jWusd4Ipsndar2VDM9
+ 1Bpn6y72+z5vddSyqDDG7EgtsiZcXBNU7fFMg1pTWcL4kBqGw+/iHT7EW09t4tYf/oKXtSbzYdxQ
+ ncIYb/dhenfs55U5LYzpDGc6aRqkQtg1oNSpHXWOW8N3YGwQTh7EHN7Pibf38YN7H2ft67vYHyxS
+ fmd/NRBA5KrLOPvLl3Hd/Flc2XEaZzc0Yze2QU0EwtGiQGWLOh/yaXByMDYEyRHcgX4O9sT5z1+9
+ yXMvvcnBYIVl+AjXRzmpl0D40vOZveoCLjpnPp9tb+KiaJR5DfW0KVVuVd/HT6YYSqc5MTjKzveP
+ 8fq2d9n55h5iAcpoPsYlPua7UgrCS+bTMKuFlpYGWk5voyMcojYAgmzvEAOJJIl4gsT7PSS1mWDa
+ 8Fu4/hcoCVBGWScVXwAAAABJRU5ErkJggg==
+ 
