@@ -88,12 +88,9 @@ binary-arch: build install
 	dh_shlibdeps
 	dh_gencontrol
 	maemo-optify
-	rm -f debian/omweather/usr/share/omweather
-	mkdir -p debian/omweather/usr/share/omweather/copyright_icons
-	mkdir -p debian/omweather/usr/share/omweather/db
-	mkdir -p debian/omweather/usr/share/omweather/sources
-	ln -s /opt/maemo/usr/share/omweather/copyright_icons/weather.com.png debian/omweather/usr/share/omweather/copyright_icons/weather.com.png
-	ln -s /opt/maemo/usr/share/omweather/db/weather.com.db debian/omweather/usr/share/omweather/db/weather.com.db
+#	mkdir -p debian/omweather-weather-com-stations-db/usr/share/omweather/copyright_icons
+#	mkdir -p debian/omweather-weather-com-stations-db/usr/share/omweather/db
+#	mkdir -p debian/omweather-weather-com-stations-db/usr/share/omweather/sources
 	dh_md5sums
 	dh_builddeb
 
